feat(bautajs): show error log on datasource error (#108)
* feat(bautajs):  Print error response of the datasource request

Closes #107

* feat(bautajs):  Print error response of the datasource request

Closes #107

* chore: update dependencies

* Do not print error log on 200 OK responses

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,13 +12,6 @@
     "import/no-extraneous-dependencies": "off",
     "prefer-spread": 0,
     "comma-dangle": ["error", "never"],
-    "global-require": 0,
-    "prettier/prettier": [
-      "error",
-      {
-        "printWidth": 100,
-        "singleQuote": true
-      }
-    ]
+    "global-require": 0
   }
 }
