--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   },
   "homepage": "https://github.axa.com/Digital/bauta-nodejs#readme",
   "devDependencies": {
-    "eslint": "6.0.1",
-    "eslint-config-airbnb-base": "13.2.0",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-import": "2.18.0",
+    "eslint": "6.4.0",
+    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-config-prettier": "6.3.0",
+    "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.0",
-    "jest": "24.8.0",
+    "jest": "24.9.0",
     "jest-extended": "0.11.2",
-    "jest-junit": "6.4.0",
-    "lerna": "3.15.0",
-    "lint-staged": "9.2.0",
-    "nock": "11.0.0-beta.23",
+    "jest-junit": "8.0.0",
+    "lerna": "3.16.4",
+    "lint-staged": "9.2.5",
+    "nock": "11.3.4",
     "pre-commit": "1.2.2",
     "prettier": "1.18.2",
     "supertest": "4.0.2"
