--- a/packages/bautajs/package.json
+++ b/packages/bautajs/package.json
@@ -29,21 +29,21 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "@javi11/openapi-request-validator": "3.7.8",
-    "ajv": "6.9.1",
-    "chalk": "2.4.1",
+    "@javi11/openapi-request-validator": "3.8.5",
+    "ajv": "6.10.2",
+    "chalk": "2.4.2",
     "debug": "4.1.1",
-    "deepmerge": "3.2.0",
-    "fast-safe-stringify": "2.0.6",
-    "form-data": "^2.5.0",
-    "glob": "7.1.3",
+    "deepmerge": "4.0.0",
+    "fast-safe-stringify": "2.0.7",
+    "form-data": "2.5.1",
+    "glob": "7.1.4",
     "got": "9.6.0",
     "loopback-filters": "1.0.0",
-    "multipart-request-builder": "2.0.0",
-    "native-proxy-agent": "2.1.0",
-    "node-object-hash": "^1.4.2",
+    "multipart-request-builder": "2.1.1",
+    "native-proxy-agent": "2.3.1",
+    "node-object-hash": "2.0.0",
     "openapi-default-setter": "2.0.4",
-    "openapi-response-validator": "3.7.0",
+    "openapi-response-validator": "3.8.2",
     "openapi-schema-validator": "3.0.3",
     "stjs": "0.0.5"
   }
