--- a/.eslintrc
+++ b/.eslintrc
@@ -1,21 +1,32 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "plugin:jest/recommended",
+    "plugin:jest/all",
     "airbnb-typescript/base",
     "plugin:prettier/recommended",
     "prettier/@typescript-eslint"
+  ],
+  "overrides": [
+    {
+      "files": "**/__tests__/*.js",
+      "rules": {
+        "example-internal/no-focused-tests": 2
+      }
+    }
   ],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["import", "jest"],
+  "plugins": ["import", "jest", "prettier"],
   "rules": {
     "no-useless-constructor": "off",
     "import/no-extraneous-dependencies": "off",
     "import/prefer-default-export": "off",
     "comma-dangle": ["error", "never"],
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "jest/prefer-expect-assertions": 0,
+    "jest/consistent-test-it": 0,
+    "jest/no-hooks": 0
   }
 }
