--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -25,14 +25,14 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "2.2.0",
+    "@bautajs/core": "2.x",
     "callsites": "3.1.0",
-    "deepmerge": "4.0.0",
+    "deepmerge": "4.2.1",
     "form-data": "2.5.1",
-    "got": "9.6.0",
+    "got": "9.x",
     "is-plain-object": "3.0.0",
-    "multipart-request-builder": "2.1.1",
-    "native-proxy-agent": "2.3.1",
+    "multipart-request-builder": "2.x",
+    "native-proxy-agent": "2.x",
     "stjs": "0.0.5"
   }
 }
