--- a/packages/bautajs-decorator-filter/package.json
+++ b/packages/bautajs-decorator-filter/package.json
@@ -25,7 +25,7 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "2.2.0",
+    "@bautajs/core": "2.x",
     "loopback-filters": "1.0.0"
   }
 }
