--- a/packages/bautajs-decorator-template/package.json
+++ b/packages/bautajs-decorator-template/package.json
@@ -25,7 +25,7 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "2.2.0",
-    "stjs": "^0.0.5"
+    "@bautajs/core": "2.x",
+    "stjs": "0.0.5"
   }
 }
