--- a/packages/bautajs-example/package.json
+++ b/packages/bautajs-example/package.json
@@ -19,8 +19,8 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "2.2.0",
-    "@bautajs/datasource-rest": "2.2.0",
-    "@bautajs/express": "2.2.0"
+    "@bautajs/core": "2.x",
+    "@bautajs/datasource-rest": "2.x",
+    "@bautajs/express": "2.x"
   }
 }
