--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -25,15 +25,15 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "2.2.0",
+    "@bautajs/core": "2.x",
     "chalk": "2.4.2",
-    "compression": "1.7.4",
-    "cors": "2.8.5",
-    "express": "4.17.1",
-    "helmet": "3.21.0",
-    "morgan": "1.9.1",
+    "compression": "1.x",
+    "cors": "2.x",
+    "express": "4.x",
+    "helmet": "3.x",
+    "morgan": "1.x",
     "openapi-types": "1.3.5",
     "route-order": "0.1.0",
-    "swagger-ui-express": "4.1.0"
+    "swagger-ui-express": "4.x"
   }
 }
