--- a/lerna.json
+++ b/lerna.json
@@ -6,8 +6,10 @@
   ],
   "command": {
     "bootstrap": {
-      "npmClientArgs": ["--no-package-lock"]
+      "npmClientArgs": [
+        "--no-package-lock"
+      ]
     }
   },
-  "version": "2.2.0"
+  "version": "2.2.1"
 }
