--- a/packages/bautajs-decorator-filter/package.json
+++ b/packages/bautajs-decorator-filter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/decorator-filter",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "A bautaJS loopback filter decorator",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -25,7 +25,7 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "2.x",
+    "@bautajs/core": "2.2.1",
     "loopback-filters": "1.0.0"
   }
 }
