--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
-    "prettier.eslintIntegration": true,
     "eslint.validate": [{
         "language": "typescript",
         "autoFix": true
     }],
-    "eslint.autoFixOnSave": true
+    "eslint.autoFixOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.fixAll.tslint": true
+    }
 }
