--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "lerna": "3.18.3",
     "lint-staged": "9.4.2",
     "nock": "11.6.0",
+    "node-mocks-http": "1.8.0",
     "nsp": "3.2.1",
     "pre-commit": "1.2.2",
     "prettier": "1.18.2",
     "prettier-check": "2.0.0",
+    "stream-mock": "2.0.5",
     "supertest": "4.0.2",
     "ts-jest": "24.1.0",
     "typescript": "3.6.4"
@@ -66,9 +68,9 @@
     "nsp": "nsp",
     "bootstrap": "lerna bootstrap",
     "postinstall": "lerna bootstrap && npm run compile",
-    "clean": "lerna clean --yes && git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./packages/*/package-lock.json ./coverage",
+    "clean": "lerna clean --yes && git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./packages/*/package-lock.json ./package-lock.json ./coverage",
     "release": "npm run clean && npm i && npm run test && lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
-    "test": "npm run lint && jest --verbose --forceExit --detectOpenHandles",
+    "test": "jest --verbose --forceExit --detectOpenHandles",
     "coverage": "npm test -- --coverage",
     "test:clean": "jest --clearCache",
     "test:watch": "jest --verbose --watchAll",
@@ -93,6 +95,7 @@
     ]
   },
   "pre-commit": [
+    "lint",
     "test"
   ],
   "jest": {
