feat: change validator from open-api module to directly AJV
Closes #23

--- a/packages/bautajs-example/package.json
+++ b/packages/bautajs-example/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@bautajs/core": "2.2.2",
     "@bautajs/datasource-rest": "2.2.2",
-    "@bautajs/express": "2.2.2"
+    "@bautajs/express": "2.2.2",
+    "@hapi/boom": "^8.0.1"
   }
 }
