docs(bautajs-datasource-rest): deprecate template methods
* deprecate restProviderTemplate and restDatasourceTemplate
* docs add documentation for rest datasource

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "prettier.eslintIntegration": true,
-    "eslint.validate": [{
+  "eslint.validate": [
+    {
         "language": "typescript",
         "autoFix": true
     }],
