--- a/package.json
+++ b/package.json
@@ -26,38 +26,38 @@
     "@types/express": "4.17.2",
     "@types/got": "9.6.9",
     "@types/helmet": "0.0.45",
-    "@types/jest": "24.0.22",
+    "@types/jest": "24.0.25",
     "@types/memoizee": "0.4.3",
     "@types/morgan": "1.7.37",
-    "@types/node": "12.12.7",
+    "@types/node": "13.1.2",
     "@types/object-path": "0.11.0",
     "@types/supertest": "2.0.8",
-    "@types/swagger-ui-express": "3.0.1",
-    "@typescript-eslint/eslint-plugin": "2.6.1",
-    "@typescript-eslint/parser": "2.6.1",
-    "eslint": "6.6.0",
-    "eslint-config-airbnb-typescript": "6.0.0",
-    "eslint-config-prettier": "6.5.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "23.0.3",
-    "eslint-plugin-prettier": "3.1.1",
+    "@types/swagger-ui-express": "4.1.1",
+    "@typescript-eslint/eslint-plugin": "2.14.0",
+    "@typescript-eslint/parser": "2.14.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-typescript": "6.3.1",
+    "eslint-config-prettier": "6.9.0",
+    "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-jest": "23.2.0",
+    "eslint-plugin-prettier": "3.1.2",
     "fast-safe-stringify": "2.0.7",
     "form-data": "3.0.0",
     "got": "9.6.0",
     "jest": "24.9.0",
     "jest-config": "24.9.0",
     "jest-extended": "0.11.2",
-    "jest-junit": "9.0.0",
-    "lint-staged": "9.4.2",
-    "nock": "11.7.0",
-    "node-mocks-http": "1.8.0",
+    "jest-junit": "10.0.0",
+    "lint-staged": "9.5.0",
+    "nock": "11.7.1",
+    "node-mocks-http": "1.8.1",
     "pre-commit": "1.2.2",
-    "prettier": "1.18.2",
+    "prettier": "1.19.1",
     "prettier-check": "2.0.0",
     "stream-mock": "2.0.5",
     "supertest": "4.0.2",
-    "ts-jest": "24.1.0",
-    "typescript": "3.7.2"
+    "ts-jest": "24.2.0",
+    "typescript": "3.7.4"
   },
   "scripts": {
     "benchmark": "npx concurrently -k -s first \"node ./packages/bautajs/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:8080/v1/api/\"",
@@ -67,11 +67,11 @@
     "postinstall": "npx lerna bootstrap --no-ci && npm run compile",
     "clean": "npx lerna clean --yes && git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./packages/*/package-lock.json ./coverage",
     "release": "npm run clean && npm i && npm run test && npx lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
-    "test": "jest --verbose --forceExit --detectOpenHandles",
+    "test": "jest --verbose --forceExit --detectOpenHandles --testTimeout=30000",
     "coverage": "npm test -- --coverage",
-    "test:clean": "jest --clearCache",
-    "test:watch": "jest --verbose --watchAll",
-    "test:ci": "npm run coverage -- --ci --maxWorkers=2  --reporters=default --reporters=jest-junit",
+    "test:clean": "jest --clearCache --testTimeout=30000",
+    "test:watch": "jest --verbose --watchAll --testTimeout=30000",
+    "test:ci": "npm run coverage -- --ci --maxWorkers=2  --reporters=default --reporters=jest-junit --testTimeout=30000",
     "checkDeps": "npx lerna exec --concurrency 14 -- npm outdated",
     "compile": "tsc --build tsconfig.build.json",
     "compile:clean": "tsc --build tsconfig.build.json --clean",
