--- a/packages/bautajs-core/package.json
+++ b/packages/bautajs-core/package.json
@@ -25,8 +25,25 @@
     "bautajs",
     "middleware"
   ],
-  "author": "javier.blanco@axa.com",
-  "license": "SEE LICENSE IN LICENSE.txt",
+  "author": {
+    "email": "javier.blanco@axa.com",
+    "name": "Javier Blanco"
+  },
+  "maintainers": [
+    {
+      "email": "javier.blanco@axa.com",
+      "name": "Javier Blanco"
+    },
+    {
+      "email": "francisco.herrero@axa.com",
+      "name": "Francisco Herrero"
+    },
+    {
+      "email": "xavier.redondo@axa.com",
+      "name": "Xavier Redondo"
+    }
+  ],
+  "license": "MIT",
   "engines": {
     "node": ">=8",
     "npm": ">=5"
