--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -43,13 +43,7 @@
   "license": "MIT",
   "dependencies": {
     "@bautajs/core": "2.2.2",
-    "callsites": "3.1.0",
-    "deepmerge": "4.2.2",
-    "form-data": "3.0.0",
-    "got": "^9.6.0",
-    "is-plain-object": "3.0.0",
-    "multipart-request-builder": "2.x",
-    "native-proxy-agent": "2.x",
-    "stjs": "0.0.5"
+    "got": "^10.2.1",
+    "native-proxy-agent": "^2.5.0"
   }
 }
