chore: improve development env and configurations and upgrade deps
Update dependencies to non breaking versions, update development environment to fix minor bugs and
add the github templates and files licenses.

--- a/packages/bautajs-core/tsconfig.json
+++ b/packages/bautajs-core/tsconfig.json
@@ -4,6 +4,6 @@
     "rootDir": "./src",
     "outDir": "./dist"
   },
-  "include": ["src/**/*.ts", "src/validators/*.json"],
-  "exclude": ["**/__tests__", "**/__mocks__", "dist"]
+  "include": ["src/**/*", "src/**/*.json"],
+  "exclude": ["**/__tests__", "**/__mocks__"]
 }
