--- a/package.json
+++ b/package.json
@@ -43,43 +43,46 @@
     "@types/express": "4.17.2",
     "@types/got": "9.6.9",
     "@types/helmet": "0.0.45",
-    "@types/jest": "24.0.25",
+    "@types/jest": "24.9.1",
     "@types/memoizee": "0.4.3",
     "@types/morgan": "1.7.37",
-    "@types/node": "13.1.2",
+    "@types/node": "13.5.0",
     "@types/object-path": "0.11.0",
     "@types/supertest": "2.0.8",
     "@types/swagger-ui-express": "4.1.1",
-    "@typescript-eslint/eslint-plugin": "2.14.0",
-    "@typescript-eslint/parser": "2.14.0",
+    "@typescript-eslint/eslint-plugin": "2.17.0",
+    "@typescript-eslint/parser": "2.17.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-typescript": "6.3.1",
     "eslint-config-prettier": "6.9.0",
-    "eslint-plugin-import": "2.19.1",
-    "eslint-plugin-jest": "23.2.0",
+    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-jest": "23.6.0",
     "eslint-plugin-prettier": "3.1.2",
     "fast-safe-stringify": "2.0.7",
     "form-data": "3.0.0",
-    "got": "9.6.0",
-    "jest": "24.9.0",
-    "jest-config": "24.9.0",
-    "jest-extended": "0.11.2",
+    "got": "10.3.0",
+    "jest": "25.1.0",
+    "jest-config": "25.1.0",
+    "jest-extended": "0.11.5",
     "jest-junit": "10.0.0",
-    "lint-staged": "9.5.0",
-    "nock": "11.7.1",
+    "nock": "11.7.2",
     "node-mocks-http": "1.8.1",
-    "pre-commit": "1.2.2",
+    "@commitlint/config-conventional": "8.3.4",
+    "commitizen": "4.0.3",
+    "commitlint": "8.3.5",
+    "cz-conventional-changelog": "3.0.2",
+    "husky": "4.2.1",
     "prettier": "1.19.1",
     "prettier-check": "2.0.0",
     "stream-mock": "2.0.5",
     "supertest": "4.0.2",
-    "ts-jest": "24.2.0",
-    "typescript": "3.7.4"
+    "ts-jest": "25.0.0",
+    "typescript": "3.7.5"
   },
   "scripts": {
+    "cm": "git-cz",
     "benchmark": "npx concurrently -k -s first \"node ./packages/bautajs/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:8080/v1/api/\"",
     "lint": "eslint '*/**/*.{ts,tsx}' ",
-    "lint-fix": "eslint '*/**/*.{ts,tsx}' --fix",
     "bootstrap": "npx lerna bootstrap --no-ci",
     "postinstall": "npx lerna bootstrap --no-ci && npm run compile",
     "clean": "npx lerna clean --yes && git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./packages/*/package-lock.json ./coverage",
@@ -95,22 +98,13 @@
     "watch": "tsc --build tsconfig.build.json --watch"
   },
   "engines": {
-    "node": ">=8"
+    "node": ">=10"
   },
-  "lint-staged": {
-    "*.ts": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.js": [
-      "prettier --write",
-      "git add"
-    ]
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
-  "pre-commit": [
-    "lint",
-    "test"
-  ],
   "jest": {
     "projects": [
       "<rootDir>/packages/*"
