--- a/packages/bautajs-decorator-template/package.json
+++ b/packages/bautajs-decorator-template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/decorator-template",
-  "version": "2.2.2",
+  "version": "2.3.0",
   "description": "A bautaJS template decorator",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -25,7 +25,7 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "2.2.2",
+    "@bautajs/core": "^2.3.0",
     "stjs": "0.0.5"
   }
 }
