--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/express",
-  "version": "2.2.2",
+  "version": "2.3.0",
   "description": "A bautaJS express plugin. Allows auto exposing the bautaJS operations.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -25,7 +25,7 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "2.2.2",
+    "@bautajs/core": "^2.3.0",
     "chalk": "2.4.2",
     "compression": "1.x",
     "cors": "2.x",
