--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.axa.com/Digital/bauta-nodejs#readme",
   "devDependencies": {
+    "@commitlint/config-conventional": "8.3.4",
     "@types/body-parser": "1.17.1",
     "@types/compression": "1.0.1",
     "@types/cors": "2.8.6",
@@ -52,6 +53,9 @@
     "@types/swagger-ui-express": "4.1.1",
     "@typescript-eslint/eslint-plugin": "2.17.0",
     "@typescript-eslint/parser": "2.17.0",
+    "commitizen": "4.0.3",
+    "commitlint": "8.3.5",
+    "cz-conventional-changelog": "3.0.2",
     "eslint": "6.8.0",
     "eslint-config-airbnb-typescript": "6.3.1",
     "eslint-config-prettier": "6.9.0",
@@ -61,17 +65,14 @@
     "fast-safe-stringify": "2.0.7",
     "form-data": "3.0.0",
     "got": "10.3.0",
+    "husky": "4.2.1",
     "jest": "25.1.0",
     "jest-config": "25.1.0",
     "jest-extended": "0.11.5",
     "jest-junit": "10.0.0",
     "nock": "11.7.2",
     "node-mocks-http": "1.8.1",
-    "@commitlint/config-conventional": "8.3.4",
-    "commitizen": "4.0.3",
-    "commitlint": "8.3.5",
-    "cz-conventional-changelog": "3.0.2",
-    "husky": "4.2.1",
+    "pino": "^5.16.0",
     "prettier": "1.19.1",
     "prettier-check": "2.0.0",
     "stream-mock": "2.0.5",
