--- a/packages/bautajs-decorator-cache/package.json
+++ b/packages/bautajs-decorator-cache/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/decorator-cache",
-  "version": "2.2.2",
+  "version": "3.0.0-alpha.0",
   "description": "A bautaJS cache decorator",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -42,7 +42,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@bautajs/core": "2.2.2",
+    "@bautajs/core": "^3.0.0-alpha.0",
     "memoizee": "0.4.14"
   }
 }
