chore: add AXA innersource licenses

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
       "name": "Xavier Redondo"
     }
   ],
-  "license": "MIT",
+  "license": "see LICENSE.txt",
   "bugs": {
     "url": "https://github.axa.com/Digital/bauta-nodejs/issues"
   },
