--- a/packages/bautajs-example/package.json
+++ b/packages/bautajs-example/package.json
@@ -34,7 +34,7 @@
       "name": "Xavier Redondo"
     }
   ],
-  "license": "MIT",
+  "license": "see LICENSE.txt",
   "dependencies": {
     "@bautajs/core": "^3.0.0-alpha.0",
     "@bautajs/datasource-rest": "^3.0.0-alpha.2",
