--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -40,7 +40,7 @@
       "name": "Xavier Redondo"
     }
   ],
-  "license": "MIT",
+  "license": "see LICENSE.txt",
   "dependencies": {
     "@bautajs/core": "^3.0.0-alpha.0",
     "got": "^10.2.1",
