--- a/package.json
+++ b/package.json
@@ -11,7 +11,24 @@
     "proxy",
     "multipart"
   ],
-  "author": "mit@axa-groupsolutions.com",
+  "author": {
+    "email": "javier.blanco@axa.com",
+    "name": "Javier Blanco"
+  },
+  "maintainers": [
+    {
+      "email": "javier.blanco@axa.com",
+      "name": "Javier Blanco"
+    },
+    {
+      "email": "francisco.herrero@axa.com",
+      "name": "Francisco Herrero"
+    },
+    {
+      "email": "xavier.redondo@axa.com",
+      "name": "Xavier Redondo"
+    }
+  ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "bugs": {
     "url": "https://github.axa.com/Digital/bauta-nodejs/issues"
