feat(@bautajs/core, @bautajs/express): Improve logs (#146)
fix(@bautajs/core, @bautajs/express): improve logs of morgan for express
fix: implement logger validator
docs: add custom logger information
feat: add morgan-json to improve morgan logs

--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -49,6 +49,7 @@
     "express": "4.x",
     "helmet": "3.x",
     "morgan": "1.x",
+    "morgan-json": "^1.1.0",
     "openapi-types": "1.3.5",
     "route-order": "0.1.0",
     "swagger-ui-express": "4.x"
