--- a/packages/bautajs-example/package.json
+++ b/packages/bautajs-example/package.json
@@ -16,7 +16,7 @@
     "express",
     "middleware"
   ],
-	"author": {
+  "author": {
     "email": "javier.blanco@axa.com",
     "name": "Javier Blanco"
   },
@@ -33,11 +33,12 @@
       "email": "xavier.redondo@axa.com",
       "name": "Xavier Redondo"
     }
-	],
+  ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
     "@bautajs/core": "^2.3.0",
     "@bautajs/datasource-rest": "^2.3.0",
-    "@bautajs/express": "^2.3.0"
+    "@bautajs/express": "^2.3.0",
+    "@hapi/boom": "^8.0.1"
   }
 }
