--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -22,7 +22,7 @@
     "express",
     "middleware"
   ],
-	"author": {
+  "author": {
     "email": "javier.blanco@axa.com",
     "name": "Javier Blanco"
   },
@@ -39,8 +39,8 @@
       "email": "xavier.redondo@axa.com",
       "name": "Xavier Redondo"
     }
-	],
-	"license": "SEE LICENSE IN LICENSE.txt",
+  ],
+  "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
     "@bautajs/core": "^2.3.0",
     "chalk": "2.4.2",
@@ -49,6 +49,7 @@
     "express": "4.x",
     "helmet": "3.x",
     "morgan": "1.x",
+    "morgan-json": "1.1.0",
     "openapi-types": "1.3.5",
     "route-order": "0.1.0",
     "swagger-ui-express": "4.x"
