--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "postinstall": "lerna bootstrap && npm run compile",
     "clean": "lerna clean --yes && git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./packages/*/package-lock.json ./coverage",
     "release": "npm run clean && npm i && npm run test && lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
-    "test": "npm run lint && jest --verbose --forceExit --detectOpenHandles",
+    "test": "jest --verbose --forceExit --detectOpenHandles",
     "coverage": "npm test -- --coverage",
     "test:clean": "jest --clearCache",
     "test:watch": "jest --verbose --watchAll",
@@ -107,6 +107,7 @@
     ]
   },
   "pre-commit": [
+    "lint",
     "test"
   ],
   "jest": {
