--- a/packages/bautajs-decorator-cache/package.json
+++ b/packages/bautajs-decorator-cache/package.json
@@ -43,6 +43,6 @@
   "license": "see LICENSE.txt",
   "dependencies": {
     "@bautajs/core": "^3.0.0-alpha.4",
-    "memoizee": "0.4.14"
+    "moize": "5.4.5"
   }
 }
