--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.base",
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "composite":true,
     "typeRoots": ["node_modules/@types", "./types"]
