fix(@bautajs/example, @bautajs/cache-decorator): add trace logs, add cache example (#160)

--- a/packages/bautajs-example/package.json
+++ b/packages/bautajs-example/package.json
@@ -39,6 +39,7 @@
     "@bautajs/core": "^3.0.0-alpha.5",
     "@bautajs/datasource-rest": "^3.0.0-alpha.5",
     "@bautajs/express": "^3.0.0-alpha.5",
-    "@hapi/boom": "^8.0.1"
+    "@hapi/boom": "^8.0.1",
+    "@bautajs/decorator-cache": "^3.0.0-alpha.5"
   }
 }
