feat(@bautajs/core,@bautajs/fastify): add fastify plugin
- Default logger is set to pino
- types moved to root folder to better organization
- Add a plugin for fastify
- Update dependencies

Closes #11

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -13,6 +13,7 @@
     { "path": "./packages/bautajs-decorator-cache" },
     { "path": "./packages/bautajs-decorator-template" },
     { "path": "./packages/bautajs-decorator-filter" },
-    { "path": "./packages/bautajs-express" }
+    { "path": "./packages/bautajs-express" },
+    { "path": "./packages/bautajs-fastify" }
   ]
 }
