--- a/.eslintrc
+++ b/.eslintrc
@@ -15,8 +15,7 @@
     }
   ],
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
+    "project": "./tsconfig.test.json"
   },
   "plugins": ["import", "jest", "prettier"],
   "rules": {
