--- a/package.json
+++ b/package.json
@@ -36,49 +36,50 @@
   "homepage": "https://github.axa.com/Digital/bauta-nodejs#readme",
   "devDependencies": {
     "@commitlint/config-conventional": "8.3.4",
-    "@types/body-parser": "1.17.1",
-    "@types/compression": "1.0.1",
+    "@types/body-parser": "1.19.0",
+    "@types/compression": "1.7.0",
     "@types/cors": "2.8.6",
     "@types/deasync": "0.1.0",
     "@types/debug": "4.1.5",
-    "@types/express": "4.17.2",
-    "@types/got": "9.6.9",
+    "@types/express": "4.17.6",
+    "@types/got": "9.6.10",
     "@types/helmet": "0.0.45",
-    "@types/jest": "24.9.1",
+    "@types/jest": "25.2.1",
     "@types/memoizee": "0.4.3",
-    "@types/morgan": "1.7.37",
-    "@types/node": "13.5.0",
+    "@types/morgan": "1.9.0",
+    "@types/node": "13.11.1",
     "@types/object-path": "0.11.0",
+    "@types/pino": "6.0.0",
     "@types/supertest": "2.0.8",
-    "@types/swagger-ui-express": "4.1.1",
-    "@typescript-eslint/eslint-plugin": "2.17.0",
-    "@typescript-eslint/parser": "2.17.0",
-    "commitizen": "4.0.3",
+    "@types/swagger-ui-express": "4.1.2",
+    "@typescript-eslint/eslint-plugin": "2.28.0",
+    "@typescript-eslint/parser": "2.28.0",
+    "commitizen": "4.0.4",
     "commitlint": "8.3.5",
-    "cz-conventional-changelog": "3.0.2",
+    "cz-conventional-changelog": "3.1.0",
     "eslint": "6.8.0",
-    "eslint-config-airbnb-typescript": "6.3.1",
-    "eslint-config-prettier": "6.9.0",
-    "eslint-plugin-import": "2.20.0",
-    "eslint-plugin-jest": "23.6.0",
-    "eslint-plugin-prettier": "3.1.2",
+    "eslint-config-airbnb-typescript": "7.2.1",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jest": "23.8.2",
+    "eslint-plugin-prettier": "3.1.3",
     "fast-safe-stringify": "2.0.7",
     "form-data": "3.0.0",
-    "got": "10.3.0",
-    "husky": "4.2.1",
-    "jest": "25.1.0",
-    "jest-config": "25.1.0",
+    "got": "10.7.0",
+    "husky": "4.2.5",
+    "jest": "25.3.0",
+    "jest-config": "25.3.0",
     "jest-extended": "0.11.5",
     "jest-junit": "10.0.0",
-    "nock": "11.7.2",
+    "nock": "12.0.3",
     "node-mocks-http": "1.8.1",
-    "pino": "^5.16.0",
+    "pino": "^6.2.0",
     "prettier": "1.19.1",
     "prettier-check": "2.0.0",
     "stream-mock": "2.0.5",
     "supertest": "4.0.2",
-    "ts-jest": "25.0.0",
-    "typescript": "3.7.5"
+    "ts-jest": "25.3.1",
+    "typescript": "3.8.3"
   },
   "scripts": {
     "cm": "git-cz",
