--- a/packages/bautajs-core/package.json
+++ b/packages/bautajs-core/package.json
@@ -2,10 +2,10 @@
   "name": "@bautajs/core",
   "version": "3.0.0-alpha.5",
   "description": "A simple library to make middlewares",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist",
+  "types": "dist",
   "files": [
-    "dist/**/*"
+    "dist"
   ],
   "scripts": {
     "tsc": "tsc"
@@ -49,14 +49,15 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "ajv": "6.11.0",
+    "ajv": "6.12.0",
     "ajv-oai": "1.2.0",
     "debug": "4.1.1",
-    "fast-glob": "3.1.1",
+    "fast-glob": "3.2.2",
     "fast-safe-stringify": "2.0.7",
     "hyperid": "2.0.3",
     "openapi-types": "1.3.5",
     "p-cancelable": "2.0.0",
-    "swagger-parser": "8.0.4"
+    "pino": "^6.2.0",
+    "@apidevtools/swagger-parser": "9.0.1"
   }
 }
