--- a/packages/bautajs-core/package.json
+++ b/packages/bautajs-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/core",
-  "version": "3.0.0-alpha.5",
+  "version": "3.0.0",
   "description": "A simple library to make middlewares",
   "main": "dist",
   "types": "dist",
@@ -49,6 +49,7 @@
     "npm": ">=5"
   },
   "dependencies": {
+    "@apidevtools/swagger-parser": "9.0.1",
     "ajv": "6.12.0",
     "ajv-oai": "1.2.0",
     "debug": "4.1.1",
@@ -57,7 +58,6 @@
     "hyperid": "2.0.3",
     "openapi-types": "1.3.5",
     "p-cancelable": "2.0.0",
-    "pino": "^6.2.0",
-    "@apidevtools/swagger-parser": "9.0.1"
+    "pino": "^6.2.0"
   }
 }
