--- a/packages/bautajs-decorator-filter/package.json
+++ b/packages/bautajs-decorator-filter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/decorator-filter",
-  "version": "3.0.0-alpha.5",
+  "version": "3.0.0",
   "description": "A bautaJS loopback filter decorator",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -42,7 +42,7 @@
   ],
   "license": "see LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "^3.0.0-alpha.5",
+    "@bautajs/core": "^3.0.0",
     "loopback-filters": "1.1.0"
   }
 }
