--- a/packages/bautajs-example/package.json
+++ b/packages/bautajs-example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bautajs-example",
-  "version": "3.0.0-alpha.5",
+  "version": "3.0.0",
   "description": "A bautaJS example",
   "main": "./server.js",
   "scripts": {
@@ -36,10 +36,10 @@
   ],
   "license": "see LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "^3.0.0-alpha.5",
-    "@bautajs/datasource-rest": "^3.0.0-alpha.5",
-    "@bautajs/express": "^3.0.0-alpha.5",
-    "@hapi/boom": "^9.1.0",
-    "@bautajs/decorator-cache": "^3.0.0-alpha.5"
+    "@bautajs/core": "^3.0.0",
+    "@bautajs/datasource-rest": "^3.0.0",
+    "@bautajs/decorator-cache": "^3.0.0",
+    "@bautajs/express": "^3.0.0",
+    "@hapi/boom": "^9.1.0"
   }
 }
