--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/express",
-  "version": "3.0.0-alpha.5",
+  "version": "3.0.0",
   "description": "A bautaJS express plugin. Allows auto exposing the bautaJS operations.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -42,7 +42,7 @@
   ],
   "license": "see LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "^3.0.0-alpha.5",
+    "@bautajs/core": "^3.0.0",
     "chalk": "4.0.0",
     "compression": "1.x",
     "cors": "2.x",
