--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/fastify",
-  "version": "3.0.0-alpha.2",
+  "version": "3.0.0",
   "description": "A bautaJS fastify plugin. Allows auto exposing the bautaJS operations.",
   "main": "dist",
   "types": "dist",
@@ -43,15 +43,15 @@
   ],
   "license": "see LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "^3.0.0-alpha.5",
+    "@bautajs/core": "^3.0.0",
     "fastify": "^2.13.1",
-    "fastify-oas": "^2.6.2",
     "fastify-helmet": "^3.0.2",
+    "fastify-oas": "^2.6.2",
     "fastify-plugin": "^1.6.1",
     "fastify-sensible": "^2.1.1",
     "route-order": "^0.1.0"
   },
   "devDependencies": {
-    "@bautajs/datasource-rest": "3.0.0-alpha.5"
+    "@bautajs/datasource-rest": "^3.0.0"
   }
 }
