feat: set default request header to x-request-id (#164)
- default request header on datasources and express set to x-request-id as the standard specify
- In order to set the default request-id on fastify you should set the requestIdHeader on the fastify instance
- Set x-request-id on the response for fastify

--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -49,6 +49,7 @@
     "fastify-oas": "^2.6.2",
     "fastify-plugin": "^1.6.1",
     "fastify-sensible": "^2.1.1",
+    "fastify-x-request-id": "^1.2.0",
     "route-order": "^0.1.0"
   },
   "devDependencies": {
