--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/datasource-rest",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "A bautaJS cache decorator",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -42,7 +42,7 @@
   ],
   "license": "see LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "^3.0.1",
+    "@bautajs/core": "3.1.0",
     "got": "^10.7.0",
     "native-proxy-agent": "^2.5.0"
   }
