--- a/packages/bautajs-decorator-cache/package.json
+++ b/packages/bautajs-decorator-cache/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/decorator-cache",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "A bautaJS cache decorator",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -42,7 +42,7 @@
   ],
   "license": "see LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "^3.0.1",
+    "@bautajs/core": "3.1.0",
     "moize": "5.4.5"
   }
 }
