--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/fastify",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "A bautaJS fastify plugin. Allows auto exposing the bautaJS operations.",
   "main": "dist",
   "types": "dist",
@@ -43,7 +43,7 @@
   ],
   "license": "see LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "^3.0.1",
+    "@bautajs/core": "3.1.0",
     "fastify": "^2.13.1",
     "fastify-helmet": "^3.0.2",
     "fastify-oas": "^2.6.2",
@@ -53,6 +53,6 @@
     "route-order": "^0.1.0"
   },
   "devDependencies": {
-    "@bautajs/datasource-rest": "^3.0.1"
+    "@bautajs/datasource-rest": "3.1.0"
   }
 }
