chore: typo on lerna json

--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
     "packages/*"
   ],
   "command": {
-    "boostrap": {
+    "bootstrap": {
       "npmClientArgs": ["--no-package-lock"]
     }
   },
