feat: add remote containers (#202)
Allow development on all OS by using docker and vsCode

 If this is a significant change, an issue has already been created where the problem/solution was discussed: [#42]

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,9 @@
 {
     "recommendations": [
-        "esbenp.prettier-vscode",
-        "dbaeumer.vscode-eslint",
-        "EditorConfig.EditorConfig"
+      "dbaeumer.vscode-eslint",
+      "Orta.vscode-jest",
+      "EditorConfig.EditorConfig",
+      "esbenp.prettier-vscode",
+      "ms-vscode-remote.remote-containers"
     ]
-}
+  }
