feat(@bautajs/rest-datasource): move to got 11 (#204)
Fix Datasource providers types
Add an example code

BREAKING CHANGE: move from got 10.x to got 11.x

Close #201

--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -8,7 +8,8 @@
     "dist/**/*"
   ],
   "scripts": {
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "example": "npx ts-node ./example/simple.ts"
   },
   "repository": {
     "type": "git",
@@ -43,7 +44,7 @@
   "license": "see LICENSE.txt",
   "dependencies": {
     "@bautajs/core": "3.4.1",
-    "got": "^10.7.0",
+    "got": "^11.8.0",
     "native-proxy-agent": "^2.5.0"
   }
 }
