--- a/package.json
+++ b/package.json
@@ -35,49 +35,50 @@
   },
   "homepage": "https://github.axa.com/Digital/bauta-nodejs#readme",
   "devDependencies": {
-    "@commitlint/config-conventional": "8.3.4",
+    "@commitlint/config-conventional": "12.0.1",
     "@types/body-parser": "1.19.0",
     "@types/compression": "1.7.0",
-    "@types/cors": "2.8.6",
+    "@types/cors": "2.8.10",
     "@types/debug": "4.1.5",
-    "@types/express": "4.17.6",
+    "@types/express": "4.17.11",
     "@types/helmet": "0.0.47",
-    "@types/jest": "25.2.3",
-    "@types/memoizee": "0.4.4",
-    "@types/morgan": "1.9.0",
-    "@types/node": "14.0.4",
+    "@types/jest": "26.0.20",
+    "@types/memoizee": "0.4.5",
+    "@types/morgan": "1.9.2",
+    "@types/node": "14.14.34",
     "@types/object-path": "0.11.0",
-    "@types/pino": "6.0.1",
-    "@types/supertest": "2.0.9",
+    "@types/pino": "6.3.6",
+    "@types/supertest": "2.0.10",
     "@types/swagger-ui-express": "4.1.2",
-    "@typescript-eslint/eslint-plugin": "2.34.0",
-    "@typescript-eslint/parser": "2.34.0",
-    "commitizen": "4.1.2",
-    "commitlint": "8.3.5",
-    "cz-conventional-changelog": "3.2.0",
-    "eslint": "6.8.0",
+    "@typescript-eslint/eslint-plugin": "4.17.0",
+    "@typescript-eslint/parser": "4.17.0",
+    "commitizen": "4.2.3",
+    "commitlint": "12.0.1",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7.21.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-axa-digital-node-typescript": "3.0.3",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-jest": "23.13.1",
-    "eslint-plugin-prettier": "3.1.3",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.2.1",
+    "eslint-plugin-prettier": "3.3.1",
     "fast-safe-stringify": "2.0.7",
-    "form-data": "3.0.0",
-    "got": "10.7.0",
-    "husky": "4.2.5",
-    "jest": "26.0.1",
-    "jest-config": "26.0.1",
+    "form-data": "4.0.0",
+    "got": "11.8.2",
+    "husky": "5.1.3",
+    "jest": "26.6.3",
+    "jest-config": "26.6.3",
     "jest-extended": "0.11.5",
-    "jest-junit": "10.0.0",
-    "nock": "12.0.3",
-    "node-mocks-http": "1.8.1",
-    "pino": "6.2.1",
-    "prettier": "2.0.5",
+    "jest-junit": "12.0.0",
+    "nock": "13.0.11",
+    "node-mocks-http": "1.10.1",
+    "pino": "6.11.2",
+    "prettier": "2.2.1",
     "prettier-check": "2.0.0",
     "stream-mock": "2.0.5",
-    "supertest": "4.0.2",
-    "ts-jest": "26.0.0",
-    "typescript": "4.0.2"
+    "supertest": "6.1.3",
+    "ts-jest": "26.5.3",
+    "typescript": "4.2.3"
   },
   "scripts": {
     "cm": "git-cz",
@@ -86,7 +87,7 @@
     "benchmark-fastify": "npx concurrently -k -s first \"node ./packages/bautajs-fastify/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:8080/v1/api/\"",
     "lint": "eslint '*/**/*.{ts,tsx}' ",
     "bootstrap": "npx lerna bootstrap --no-ci",
-    "postinstall": "npx lerna bootstrap --no-ci && npm run compile",
+    "postinstall": "husky install && npx lerna bootstrap --no-ci && npm run compile",
     "clean": "npx lerna clean --yes && git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./packages/*/package-lock.json ./coverage",
     "release": "npm run clean && npm i && npm run test && npx lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
     "test": "jest --verbose --detectOpenHandles --testTimeout=30000",
