feat(@bautajs/express): refactor module (#219)
feat: The module has been refactoring to convert it into a more "plugin" base. With the new solution, the developer has more control over the express instance.

Closes #216

--- a/packages/bautajs-example/package.json
+++ b/packages/bautajs-example/package.json
@@ -40,6 +40,7 @@
     "@bautajs/datasource-rest": "3.4.1",
     "@bautajs/decorator-cache": "3.4.1",
     "@bautajs/express": "3.4.1",
-    "@hapi/boom": "^9.1.0"
+    "@hapi/boom": "^9.1.0",
+    "express": "4.x"
   }
 }
