feat: update packages (#226)
feat: update ajv to 8.x
feat: use ajv-format instead of ajv-oai
chore: update dev dependencies
feat: update openapi-types from 1.x to 9.x

BREAKING CHANGE: ajv from 6 to 8
BREAKING CHANGE: ajv-oai to ajv-formats

--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -43,7 +43,7 @@
   ],
   "license": "see LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "3.4.1",
+    "@bautajs/core": "^3.4.1",
     "got": "^11.8.0",
     "native-proxy-agent": "^2.5.0"
   }
