--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -42,14 +42,14 @@
   ],
   "license": "see LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "3.4.1",
+    "@bautajs/core": "^3.4.1",
     "compression": "1.x",
     "cors": "2.x",
     "express": "4.x",
-    "helmet": "3.x",
+    "helmet": "4.x",
     "morgan": "1.x",
     "morgan-json": "^1.1.0",
-    "openapi-types": "1.3.5",
+    "openapi-types": "9.0.0",
     "route-order": "0.1.0",
     "swagger-ui-express": "4.x"
   }
