--- a/packages/bautajs-core/package.json
+++ b/packages/bautajs-core/package.json
@@ -49,15 +49,14 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "@apidevtools/swagger-parser": "9.0.1",
-    "ajv": "6.12.2",
-    "ajv-oai": "1.2.0",
-    "debug": "4.1.1",
-    "fast-glob": "3.2.2",
+    "@apidevtools/swagger-parser": "10.0.2",
+    "ajv": "8.4.0",
+    "ajv-formats": "2.1.0",
+    "fast-glob": "3.2.5",
     "fast-safe-stringify": "2.0.7",
-    "hyperid": "2.0.5",
-    "openapi-types": "1.3.5",
-    "p-cancelable": "2.0.0",
+    "hyperid": "2.1.0 ",
+    "openapi-types": "9.0.0",
+    "p-cancelable": "2.1.1",
     "pino": "^6.2.1"
   }
 }
