--- a/packages/bautajs-example/package.json
+++ b/packages/bautajs-example/package.json
@@ -36,10 +36,10 @@
   ],
   "license": "see LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "3.4.1",
-    "@bautajs/datasource-rest": "3.4.1",
-    "@bautajs/decorator-cache": "3.4.1",
-    "@bautajs/express": "3.4.1",
+    "@bautajs/core": "^3.4.1",
+    "@bautajs/datasource-rest": "^3.4.1",
+    "@bautajs/decorator-cache": "^3.4.1",
+    "@bautajs/express": "^3.4.1",
     "@hapi/boom": "^9.1.0",
     "express": "4.x"
   }
