--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -48,10 +48,10 @@
     "fastify": "^3.14.0",
     "fastify-openapi-docs": "^0.4.0",
     "fastify-plugin": "^3.0.0",
-    "fastify-x-request-id": "^1.2.0",
+    "fastify-x-request-id": "^2.0.0",
     "route-order": "^0.1.0"
   },
   "devDependencies": {
-    "@bautajs/datasource-rest": "3.6.1"
+    "@bautajs/datasource-rest": "^3.6.1"
   }
 }
