feat(@bautajs/express): replace morgan by pino (#228)
chore: fix license
chore: fix fastify example
fix(@bautajs/fastify): leave default fastify serializers

BREAKING CHANGE: replace morgan by express-pino

--- a/packages/bautajs-decorator-filter/package.json
+++ b/packages/bautajs-decorator-filter/package.json
@@ -40,7 +40,7 @@
       "name": "Xavier Redondo"
     }
   ],
-  "license": "see LICENSE.txt",
+  "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
     "@bautajs/core": "^3.4.1",
     "loopback-filters": "1.1.1"
