--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
       "name": "Xavier Redondo"
     }
   ],
-  "license": "see LICENSE.txt",
+  "license": "SEE LICENSE IN LICENSE.txt",
   "bugs": {
     "url": "https://github.axa.com/Digital/bauta-nodejs/issues"
   },
@@ -41,12 +41,14 @@
     "@types/cors": "2.8.10",
     "@types/debug": "4.1.5",
     "@types/express": "4.17.11",
+    "@types/express-pino-logger": "^4.0.2",
     "@types/jest": "26.0.23",
     "@types/memoizee": "0.4.5",
     "@types/morgan": "1.9.2",
     "@types/node": "15.3.0",
     "@types/object-path": "0.11.0",
     "@types/pino": "6.3.8",
+    "@types/split2": "^3.2.0",
     "@types/supertest": "2.0.11",
     "@types/swagger-ui-express": "4.1.2",
     "@typescript-eslint/eslint-plugin": "4.23.0",
@@ -57,7 +59,6 @@
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.26.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-axa-digital-node-typescript": "3.0.3",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.23.2",
     "eslint-plugin-jest": "24.3.6",
@@ -75,6 +76,7 @@
     "pino": "6.11.3",
     "prettier": "2.3.0",
     "prettier-check": "2.0.0",
+    "split2": "^3.2.2",
     "stream-mock": "2.0.5",
     "supertest": "6.1.3",
     "ts-jest": "26.5.6",
