--- a/packages/bautajs-core/package.json
+++ b/packages/bautajs-core/package.json
@@ -43,7 +43,7 @@
       "name": "Xavier Redondo"
     }
   ],
-  "license": "se LICENSE.txt",
+  "license": "SEE LICENSE IN LICENSE.txt",
   "engines": {
     "node": ">=10",
     "npm": ">=5"
