feat(@bautajs/datasource): improve logs (#230)
Improve logs by "logging" them as a JSON instead of a string

BREAKING CHANGE: move truncateLogSize and disableTruncateLog to @bautajs/datasource
BREAKING CHANGE: logs has been refactored

--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -43,6 +43,7 @@
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
+    "@sindresorhus/is":"4.0.1",
     "@bautajs/core": "^3.4.1",
     "got": "^11.8.0",
     "native-proxy-agent": "^2.5.0"
