--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/express",
-  "version": "3.4.1",
+  "version": "4.0.0",
   "description": "A bautaJS express plugin. Allows auto exposing the bautaJS operations.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -42,15 +42,15 @@
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "^3.4.1",
+    "@bautajs/core": "4.0.0",
     "compression": "1.x",
     "cors": "2.x",
     "express": "4.x",
-    "helmet": "4.x",
     "express-pino-logger": "6.x",
+    "helmet": "4.x",
     "openapi-types": "9.0.0",
+    "pino": "^6.2.1",
     "route-order": "0.1.0",
-    "swagger-ui-express": "4.x",
-    "pino": "^6.2.1"
+    "swagger-ui-express": "4.x"
   }
 }
