--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/datasource-rest",
-  "version": "3.4.1",
+  "version": "4.0.0",
   "description": "A bautaJS cache decorator",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -43,8 +43,8 @@
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@sindresorhus/is":"4.0.1",
-    "@bautajs/core": "^3.4.1",
+    "@bautajs/core": "4.0.0",
+    "@sindresorhus/is": "4.0.1",
     "got": "^11.8.0",
     "native-proxy-agent": "^2.5.0"
   }
