chore: remove the usage of npx on release

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "jest-config": "26.6.3",
     "jest-extended": "0.11.5",
     "jest-junit": "12.0.0",
+    "lerna": "^4.0.0",
     "nock": "13.0.11",
     "node-mocks-http": "1.10.1",
     "pino": "6.11.3",
@@ -92,13 +93,13 @@
     "bootstrap": "npx lerna bootstrap --no-ci",
     "postinstall": "husky install && npx lerna bootstrap --no-ci && npm run compile",
     "clean": "npx lerna clean --yes && git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./packages/*/package-lock.json ./coverage",
-    "release": "npm run clean && npm i && npm run test && npx lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
+    "release": "npm run clean && npm i && npm run test && lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
     "test": "jest --verbose --detectOpenHandles --testTimeout=30000",
     "coverage": "npm test -- --coverage",
     "test:clean": "jest --clearCache --testTimeout=30000",
     "test:watch": "jest --verbose --watchAll --testTimeout=30000",
     "test:ci": "npm run coverage -- --ci --maxWorkers=2  --reporters=default --reporters=jest-junit --testTimeout=30000",
-    "checkDeps": "npx lerna exec --concurrency 14 -- npm outdated",
+    "checkDeps": "lerna exec --concurrency 14 -- npm outdated",
     "compile": "tsc --build tsconfig.build.json",
     "compile:clean": "tsc --build tsconfig.build.json --clean",
     "watch": "tsc --build tsconfig.build.json --watch"
