fix: update dependencies and deprecate (#264)
chore: delete @bautajs/decorator-filter
chore: delete @bautajs/decorator-template

chore: update dependencies

--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -44,8 +44,8 @@
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
     "@bautajs/core": "5.1.0",
-    "@sindresorhus/is": "4.0.1",
-    "got": "^11.8.0",
+    "@sindresorhus/is": "^4.0.1",
+    "got": "^11.8.2",
     "native-proxy-agent": "^2.5.0"
   }
 }
