--- a/package.json
+++ b/package.json
@@ -36,53 +36,50 @@
   },
   "homepage": "https://github.axa.com/Digital/bauta-nodejs#readme",
   "devDependencies": {
-    "@commitlint/config-conventional": "12.1.4",
-    "@types/body-parser": "1.19.0",
-    "@types/compression": "1.7.0",
-    "@types/cors": "2.8.10",
-    "@types/debug": "4.1.5",
-    "@types/express": "4.17.11",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@types/body-parser": "^1.19.1",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/express-pino-logger": "^4.0.2",
-    "@types/jest": "26.0.23",
-    "@types/memoizee": "0.4.5",
-    "@types/morgan": "1.9.2",
-    "@types/node": "15.3.0",
-    "@types/object-path": "0.11.0",
-    "@types/pino": "6.3.8",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/pino": "^6.3.11",
     "@types/split2": "^3.2.0",
-    "@types/supertest": "2.0.11",
-    "@types/swagger-ui-express": "4.1.2",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
+    "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "4.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "bench": "^0.3.6",
-    "commitizen": "4.2.4",
-    "commitlint": "12.1.4",
-    "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.26.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.23.2",
-    "eslint-plugin-jest": "24.3.6",
-    "eslint-plugin-prettier": "3.4.0",
-    "fast-safe-stringify": "2.0.7",
-    "form-data": "4.0.0",
-    "got": "11.8.2",
-    "husky": "6.0.0",
-    "jest": "26.6.3",
-    "jest-config": "26.6.3",
-    "jest-extended": "0.11.5",
-    "jest-junit": "12.0.0",
+    "commitizen": "^4.2.4",
+    "commitlint": "^13.1.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "fast-safe-stringify": "^2.0.8",
+    "form-data": "^4.0.0",
+    "got": "^11.8.2",
+    "husky": "^7.0.2",
+    "jest": "^27.1.0",
+    "jest-config": "^27.1.0",
+    "jest-extended": "^0.11.5",
+    "jest-junit": "^12.2.0",
     "lerna": "^4.0.0",
-    "nock": "13.0.11",
-    "node-mocks-http": "1.10.1",
-    "pino": "6.11.3",
-    "prettier": "2.3.0",
-    "prettier-check": "2.0.0",
+    "nock": "^13.1.3",
+    "node-mocks-http": "^1.10.1",
+    "pino": "^6.13.2",
+    "prettier": "^2.3.2",
+    "prettier-check": "^2.0.0",
     "split2": "^3.2.2",
-    "stream-mock": "2.0.5",
-    "supertest": "6.1.3",
-    "ts-jest": "26.5.6",
-    "typescript": "4.2.4"
+    "stream-mock": "^2.0.5",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
+    "typescript": "4.4.x"
   },
   "scripts": {
     "lerna": "lerna",
