--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -48,9 +48,9 @@
     "express": "4.x",
     "express-pino-logger": "6.x",
     "helmet": "4.x",
-    "openapi-types": "9.0.0",
-    "pino": "^6.2.1",
-    "route-order": "0.1.0",
+    "openapi-types": "^9.3.0",
+    "pino": "^6.13.2",
+    "route-order": "^0.1.0",
     "swagger-ui-express": "4.x"
   }
 }
