--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "ts-jest": "^27.0.5",
     "typescript": "4.4.x"
   },
+  "dependencies": {},
   "scripts": {
     "lerna": "lerna",
     "cm": "git-cz",
