--- a/packages/bautajs-decorator-cache/package.json
+++ b/packages/bautajs-decorator-cache/package.json
@@ -45,5 +45,6 @@
     "@bautajs/core": "5.1.3",
     "node-object-hash": "^2.3.9",
     "quick-lru-cjs": "^5.2.1"
-  }
+  },
+  "devDependencies": {}
 }
